<resources>
    <string name="app_name">maintanenceApp</string>
    <string name="full_name">Full Name</string>
    <string name="nric">NRIC</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="icarserve">ICARSERVE</string>
    <string name="not_register_create_account_here">Not Register? Create Account Here</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="not_register_register_here">Not Register? Register Here</string>
    <string name="button">Button</string>
    <string name="logout">LOGOUT</string>
    <string name="profile">PROFILE</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="history">HISTORY</string>
    <string name="reminder">REMINDER</string>
    <string name="home">HOME</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="update">UPDATE</string>
    <string name="forget_password">Forget Password?</string>
    <string name="open_images">Open Images</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">reset</string>
    <string name="you_will_receive_email_to_reset_password">You will receive email to reset password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_paasword">Confirm Paasword</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="feedback">FEEDBACK</string>
    <string name="admin">ADMIN</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="user_login">USER LOGIN</string>
    <string name="service_detail">SERVICE DETAIL</string>
    <string name="service_type">SERVICE TYPE:</string>
    <string name="mileage">MILEAGE:</string>
    <string name="service_cost">SERVICE COST:</string>
    <string name="confirm">CONFIRM</string>
    <string name="resetservebtn">RESET</string>
    <string name="select_service">select service</string>
    <string name="service_cost_rm">SERVICE COST: RM</string>
    <string name="logoutad">LOGOUT</string>
    <string name="icarservead">ICARSERVE</string>
    <string name="feedbackadmin">feedback</string>
    <string name="feedbacks">feedback</string>
    <string name="appt_history">APPT HISTORY</string>
    <string name="car_service_info">CAR SERVICE INFO</string>
    <string name="historyappt">historyappt</string>
    <string-array name="cartypess">
        <item>SEDAN</item>
        <item>COUPE</item>
        <item>SPORTS CAR</item>
        <item>HATCHBACK</item>
        <item>SUV</item>
        <item>PICKUP</item>
        <item>MINIVAN</item>
    </string-array>
    <string-array name="timeess">
        <item>11:00 AM</item>
        <item>12:00 AM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
    </string-array>
    <string-array name="appstatus">
        <item>pending</item>
        <item>canceled</item>
        <item>accepted</item>
        <item>completed</item>
    </string-array>
</resources>