<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8AA0F1"
    android:visibility="visible"
    tools:context=".Register">

    <EditText
        android:id="@+id/FullName"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <EditText
        android:id="@+id/NRIC"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nric"
        android:inputType="number"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/EmailAdmin"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <EditText
        android:id="@+id/PasswordAdmin"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <Button
        android:id="@+id/userregisterbtn"
        android:layout_width="197dp"
        android:layout_height="58dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="#011113"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/ICAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="#150F0F"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/LoginHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered_login_here"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.84000003"
        tools:targetApi="lollipop" />

    <RadioGroup
        android:id="@+id/Gender"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PhoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PhoneNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="#0B0A0A" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="#0B0A0A" />
    </RadioGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:subtitleTextColor="#F8F3F3"
        app:titleTextColor="#F8F3F3" />

</androidx.constraintlayout.widget.ConstraintLayout>