<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F5F8"
    tools:context=".UpdateUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF" />

    <EditText
        android:id="@+id/FullName"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:textColor="#0B0A0A"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <EditText
        android:id="@+id/NRIC"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:textColor="#0B0A0A"
        android:hint="@string/nric"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/userupdatebtn"
        android:layout_width="197dp"
        android:layout_height="58dp"
        android:text="@string/update"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/my_profile"
        android:textColor="#150F0F"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <RadioGroup
        android:id="@+id/Gender"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PhoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PhoneNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629">

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#0B0A0A"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/Male"
            android:textColor="#0B0A0A"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dp"
        android:layout_height="31dp"
        android:text="Full Name:"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:text="NRIC:"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="137dp"
        android:layout_height="31dp"
        android:text="Phone Number:"
        android:textSize="18sp"
        android:textColor="#0B0A0A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="89dp"
        android:layout_height="30dp"
        android:text="Gender:"
        android:textSize="18sp"
        android:textColor="#0B0A0A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

</androidx.constraintlayout.widget.ConstraintLayout>